--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.465.0",
+    "motion": "^12.4.3",
     "next": "15.0.3",
     "next-sanity": "^9.8.16",
     "react": "19.0.0-rc-66855b96-20241106",
